<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#000"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="Username atau Email"
                app:startIconDrawable="@drawable/ic_user"
                android:layout_marginTop="20dp"
                android:labelFor="@+id/Email"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="Password"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/Password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_ganti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_ganti_pass"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:clickable="true"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/login_tombol_masuk"
                android:layout_width="210dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/tombol_masuk"
                android:textSize="17sp"
                android:textColor="#4b4b4b"
                android:textStyle="bold"
                android:backgroundTint="#c1c1c1"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <View
                    android:id="@+id/line_1"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/atau"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/atau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atau"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/line_2"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/atau"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Belum Punya Akun?"
                android:textColor="#a4a4a4"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/login_tombol_daftar"
                android:layout_width="210dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/tombol_daftar"
                android:textSize="17sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:backgroundTint="#009688"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>