<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrasi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textColor="#fff"
                android:textSize="20sp"
                android:fontFamily="@font/alata"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title3"
                android:textColor="#fff"
                android:textSize="20sp"
                android:fontFamily="@font/alata"
                android:textAlignment="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                app:startIconDrawable="@drawable/ic_user"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundColor="#fff"
                android:labelFor="@+id/Username"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registrasi_username"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundColor="@color/white"
                android:labelFor="@+id/Email"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registrasi_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundColor="@color/white"
                android:labelFor="@+id/Password"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registrasi_password"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/registrasi_tombol_daftar"
                android:layout_width="210dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/tombol_daftar"
                android:textSize="17sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:backgroundTint="#009688"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <View
                    android:id="@+id/line_1"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/atau"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/atau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atau"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/line_2"
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/atau"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sudah punya akun?"
                android:textColor="#a4a4a4"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/registrasi_tombol_login"
                android:layout_width="210dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/tombol_masuk"
                android:textSize="17sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:backgroundTint="#E91E63"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>