<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Filter dari Tanggal"
                android:labelFor="@+id/Password"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filter_grafik"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:clickable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/aksi_filter"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/judul_grafik_suhu"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/grafik_suhu"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/judul_grafik_kelembaban_tanah"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/grafik_kelembaban_tanah"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/judul_grafik_lama_siram"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/grafik_lama_siram"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>